; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/amdgpu_dm/extr_amdgpu_dm.c_amdgpu_dm_audio_component_bind.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/amdgpu_dm/extr_amdgpu_dm.c_amdgpu_dm_audio_component_bind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.drm_device = type { %struct.amdgpu_device* }
%struct.amdgpu_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.drm_audio_component* }
%struct.drm_audio_component = type { %struct.device*, i32* }

@amdgpu_dm_audio_component_ops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device*, i8*)* @amdgpu_dm_audio_component_bind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @amdgpu_dm_audio_component_bind(%struct.device* %0, %struct.device* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.drm_device*, align 8
  %8 = alloca %struct.amdgpu_device*, align 8
  %9 = alloca %struct.drm_audio_component*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device* %1, %struct.device** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = load %struct.device*, %struct.device** %4, align 8
  %11 = call %struct.drm_device* @dev_get_drvdata(%struct.device* %10)
  store %struct.drm_device* %11, %struct.drm_device** %7, align 8
  %12 = load %struct.drm_device*, %struct.drm_device** %7, align 8
  %13 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %12, i32 0, i32 0
  %14 = load %struct.amdgpu_device*, %struct.amdgpu_device** %13, align 8
  store %struct.amdgpu_device* %14, %struct.amdgpu_device** %8, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = bitcast i8* %15 to %struct.drm_audio_component*
  store %struct.drm_audio_component* %16, %struct.drm_audio_component** %9, align 8
  %17 = load %struct.drm_audio_component*, %struct.drm_audio_component** %9, align 8
  %18 = getelementptr inbounds %struct.drm_audio_component, %struct.drm_audio_component* %17, i32 0, i32 1
  store i32* @amdgpu_dm_audio_component_ops, i32** %18, align 8
  %19 = load %struct.device*, %struct.device** %4, align 8
  %20 = load %struct.drm_audio_component*, %struct.drm_audio_component** %9, align 8
  %21 = getelementptr inbounds %struct.drm_audio_component, %struct.drm_audio_component* %20, i32 0, i32 0
  store %struct.device* %19, %struct.device** %21, align 8
  %22 = load %struct.drm_audio_component*, %struct.drm_audio_component** %9, align 8
  %23 = load %struct.amdgpu_device*, %struct.amdgpu_device** %8, align 8
  %24 = getelementptr inbounds %struct.amdgpu_device, %struct.amdgpu_device* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  store %struct.drm_audio_component* %22, %struct.drm_audio_component** %25, align 8
  ret i32 0
}

declare dso_local %struct.drm_device* @dev_get_drvdata(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
